chore(gh-action): wip main.yml for testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,8 @@
 on:
-  push:
-    paths:
-    - '*.md'
-    - '/docs/*'
+  push
 name: Testing linkcheck
 jobs:
-  markdown-link-check:
+  blc-link-check:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
